[gd_scene load_steps=2 format=3 uid="uid://cofhwm3lpr704"]

[ext_resource type="Script" path="res://src/scene/selected_mission.gd" id="1_t8mgf"]

[node name="SelectedMission" type="Node2D"]
script = ExtResource("1_t8mgf")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 350.0
offset_bottom = 341.0
color = Color(0, 1, 1, 0.701961)

[node name="Label2" type="Label" parent="."]
offset_left = 18.0
offset_top = 80.0
offset_right = 147.0
offset_bottom = 259.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Enemies:


Rewards:"

[node name="RewardExperienceLabel" type="Label" parent="."]
offset_left = 15.0
offset_top = 182.0
offset_right = 55.0
offset_bottom = 205.0

[node name="RewardGoldLabel" type="Label" parent="."]
offset_left = 16.0
offset_top = 203.0
offset_right = 56.0
offset_bottom = 226.0

[node name="LevelNameLabel" type="Label" parent="."]
offset_left = 22.0
offset_top = 41.0
offset_right = 62.0
offset_bottom = 64.0

[node name="SelectedMissionLabel" type="Label" parent="."]
offset_left = 19.0
offset_top = 13.0
offset_right = 148.0
offset_bottom = 36.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Selected Mission"

[node name="ButtonStartMission" type="Button" parent="."]
offset_left = 220.0
offset_top = 281.0
offset_right = 310.0
offset_bottom = 319.0
text = "Start Mission"

[node name="ButtonCancel" type="Button" parent="."]
offset_left = 15.0
offset_top = 286.0
offset_right = 105.0
offset_bottom = 324.0
text = "Cancel"
